<!--
  ~  Copyright 2019 Dmitriy Ponomarenko
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<resources>
	<string name="app_name">Вибори Президента 2019</string>
	<string name="elections">Вибори 2019</string>

	<string name="tittle_settings">Налаштування</string>
	<string name="welcome">Вітаємо!</string>
	<string name="open_source_licences">Бібліотеки з відкритим кодом</string>
	<string name="share_app">Поділитися додатком</string>
	<string name="share_details">Я проголосував в додатку Вибори Президента 2019</string>

	<string name="make_your_choice">Зроби свій вибір прямо зараз!</string>
	<string name="only_here">Тільки тут!</string>
	<string name="fair_elections">Самі чесні і справедливі вибори</string>
	<string name="vote_results">Результати</string>
	<string name="select_candidate">Виберіть кандидата</string>
	<string name="votes">Голоси</string>
	<string name="vote">Голосування</string>
	<string name="confirm_vote">Підтвердити голос за %s</string>
	<string name="emulator">Емулятор!</string>
	<string name="vote_from_emulator_not_allowed">Ваш смартфон визначено як емулятор. Голосувати з емулятора заборонено!</string>
	<string name="your_device_already_voted">З вашого смартфона вже голосували</string>
	<string name="location_are_needed">Щоб визначити країну в якій ви знаходитесь нам потрібно отримати дозвіл на зчитування координат</string>
	<string name="warning">Увага!</string>
	<string name="are_you_from_ukraine">Ви з України?</string>
	<string name="answer_honestly">Будь-ласка, відповідайте чесно! \nВи зможете проголосувати незалежно від відповіді.</string>
	<string name="error_location">Не вдалося визначити ваше місцезнаходження</string>
	<string name="error">Помилка!</string>
	<string name="pull_to_top_or_bottom_to_close">Потягніть зображення щоб закрити</string>
	<string name="no_connection_to_internet">Відсутнє з\'єднання з інтернетом.\nДля продовження роботи підключіться до інтернету.</string>
	<string name="voting_is_finished">Голосування завершено</string>

	<string name="btn_ok">Добре</string>
	<string name="btn_yes">Так</string>
	<string name="btn_no">Ні</string>
	<string name="btn_cancel">Відмінити</string>
	<string name="btn_not_now">Не зараз</string>
	<string name="btn_next">Далі</string>
	<string name="btn_apply">Застосувати</string>
	<string name="btn_start">Почати</string>
	<string name="btn_settings">Налаштування</string>
	<string name="btn_vote">Голосувати</string>
	<string name="btn_vote2">Проголосувати</string>
	<string name="btn_results">Результати</string>

	<string name="today">Сьогодні</string>
	<string name="yesterday">Вчора</string>

	<string name="item_image">Зображення елемента</string>

	<string name="request">Зворотній зв\'язок</string>
	<string name="rate_app">Оцінити додаток</string>
	<string name="email_clients_not_found">Не знайдено жодного поштового клієнта</string>
	<string name="send_email">Надіслати по електронній пошті&#8230;</string>

	<!-- Shown in the 'About' window of the app. -->
	<string name="about_body"><![CDATA[
    	<b>Вибори 2019</b><br>Версія %s
	]]></string>

	<string name="licences_description">Ця програма використовує такі бібліотеки з відкритим кодом</string>

</resources>
